@@ -1,0 +1,9 @@
+#include "EU3World.h"
+#include "..\temp.h"
+
+
+
+void EU3World::output(FILE* output)
+{
+	outputTempHeader(output);
+}
