@@ -1,0 +1,9 @@
+#include <fstream>
+
+
+
+class EU3World
+{
+	public:
+		void output(FILE*);
+};
