@@ -1,8 +1,9 @@
+#include "..\Log.h"
 #include "Parser.h"
 #include <fstream>
 #include <boost/spirit/include/support_istream_iterator.hpp>
 #include <boost/spirit/include/qi.hpp>
-#include "..\Log.h"
+
 
 using namespace boost::spirit;
 
